--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,7 @@
 == README
+[![Code Climate](https://codeclimate.com/github/jnwaletzko/cabin_counter/badges/gpa.svg)](https://codeclimate.com/github/jnwaletzko/cabin_counter)
+[![Test Coverage](https://codeclimate.com/github/jnwaletzko/cabin_counter/badges/coverage.svg)](https://codeclimate.com/github/jnwaletzko/cabin_counter/coverage)
+[![Issue Count](https://codeclimate.com/github/jnwaletzko/cabin_counter/badges/issue_count.svg)](https://codeclimate.com/github/jnwaletzko/cabin_counter)
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
